cmake_minimum_required(VERSION 3.10)
project(LearnOpenGL)

add_subdirectory(src/demo2_1)
add_subdirectory(src/demo2_2)
add_subdirectory(src/demo2_3)
add_subdirectory(src/demo2_4)
add_subdirectory(src/demo2_5)
add_subdirectory(src/demo2_6)
add_subdirectory(src/demo4_1)
add_subdirectory(src/demo4_2)
add_subdirectory(src/demo4_3)
add_subdirectory(src/demo5_1)
add_subdirectory(src/demo6_3)
add_subdirectory(src/demo7_1)
add_subdirectory(src/demo7_2)
add_subdirectory(src/demo7_3)
add_subdirectory(src/demo8_1)
add_subdirectory(src/demo8_2)
add_subdirectory(src/demo9_1)
add_subdirectory(src/demo9_2)
add_subdirectory(src/demo9_3)
add_subdirectory(src/demo10_1)
add_subdirectory(src/demo10_2)
add_subdirectory(src/demo10_3)
add_subdirectory(src/demo10_4)